@@ -5,7 +5,7 @@
 .\" Copyright © 2000-2001 Wichert Akkerman <wakkerma@debian.org>
 .\" Copyright © 2002-2003 Adam Heath <doogie@debian.org>
 .\" Copyright © 2004 Scott James Remnant <keybuk@debian.org>
-.\" Copyright © 2008-2013 Guillem Jover <guillem@debian.org>
+.\" Copyright © 2008-2014 Guillem Jover <guillem@debian.org>
 .\"
 .\" This is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
@@ -20,7 +20,7 @@
 .\" You should have received a copy of the GNU General Public License
 .\" along with this program.  If not, see <https://www.gnu.org/licenses/>.
 .
-.TH start\-stop\-daemon 8 "2013-12-14" "Debian Project" "dpkg utilities"
+.TH start\-stop\-daemon 8 "2014-03-26" "Debian Project" "dpkg utilities"
 .SH NAME
 start\-stop\-daemon \- start and stop system daemon programs
 .
@@ -106,6 +106,10 @@ Show the program version and exit.
 .BR \-\-pid " \fIpid\fP"
 Check for a process with the specified \fIpid\fP. The \fIpid\fP must be a
 number greater than 0.
+.TP
+.BR \-\-ppid " \fIppid\fP"
+Check for a process with the specified \fIppid\fP (parent pid).
+The \fIppid\fP must be a number greater than 0.
 .TP
 .BR \-p ", " \-\-pidfile " \fIpid-file\fP"
 Check whether a process has created the file \fIpid-file\fP. Note: using this
