@@ -64,6 +64,8 @@ dpkg (1.17.7) UNRELEASED; urgency=low
     - Fix OpenBSD KVM code to use current kinfo_proc layout.
     - Detect system specific headers at configure time instead of hardcoding
       their usage depending on system macros.
+    - Add a new --ppid matching option to check for parent PID.
+      Suggested by Alex Mestiashvili <mailatgoogl@gmail.com>.
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
